# asa-py-devfile

./: Dockerfile  README.md  deploy.yaml  devfile.yaml  pyproject.toml
src/service/: __init__.py  __main__.py  __project__.py  __version__.py
src/service/api/: __init__.py  lowlevel.py
