[tool.poetry]
name = "asa-py-devfile"
version = "1.0.0"
description = ""
authors = ["Alejandro M. BERNARDIS <alejandro.bernardis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.1"
uvloop = "^0.19.0"
aiodns = "^3.1.1"
brotli = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
